# Agency

./: README.md
GraphWritterAgents/: SubAgent.py  agent.py  pyproject.toml
LocalMulti-WritterAgents/GraphWritterAgents/: .env.example  LangFuseConf.py  agent.py  agents.py  main copy.py  main.py  mcp-server.py  prompts.py  pyproject.toml  route.py  scheme.py
LocalMulti-WritterAgents/LocWritterAgents/: README.md  SubAgent.py  pyproject.toml
LocalMulti-WritterAgents/LocWritterAgents/archive/: china.md.md  love.md.md  titanic.md  россия.md.md
WritterAgent/: .env.example  PROMPT_RU.md  SubAgent.py  agent.py  main.py  prompts.py  pyproject.toml
WritterAgent/archive/: great_patriotic_war-4.md  Война 1941-1945 года.md.md  Война_1941-1945_года-2.md  Вторая мировая война-1.md  Вторая мировая война.md.md
