[project]
name = "graphwritteragents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.6",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.0",
    "mcp>=1.27.2",
    "tavily>=1.1.0",
    "uvicorn>=0.49.0",
]
