[project]
name = "graphwritteragents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.0",
    "langfuse>=4.7.1",
    "langgraph>=1.2.4",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "tavily>=1.1.0",
    "uvicorn>=0.49.0",
]
